<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/programTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_calculator_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/linearLayoutFirstOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programTitleTV"
        app:layout_constraintVertical_bias="0.1">

        <EditText
            android:id="@+id/hourFirstOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7pt"
            android:layout_weight="1"
            android:hint="@string/text_hour"/>

        <EditText
            android:id="@+id/minuteFirstOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="7pt"
            android:hint="@string/text_minute"
            />

        <EditText
            android:id="@+id/secondFirstOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="7pt"
            android:hint="@string/text_second"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSecondOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFirstOperand"
        app:layout_constraintVertical_bias="0.1">

        <EditText
            android:id="@+id/hourSecondOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7pt"
            android:layout_weight="1"
            android:hint="@string/text_hour"/>

        <EditText
            android:id="@+id/minuteSecondOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="7pt"
            android:hint="@string/text_minute"
            />

        <EditText
            android:id="@+id/secondSecondOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="7pt"
            android:hint="@string/text_second"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutChoiceOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSecondOperand"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="horizontal"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt">

        <Button
            android:id="@+id/buttonSumBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/buttonDifBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:textSize="22sp"/>




    </LinearLayout>
    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_result"
        android:textSize="36sp"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutChoiceOperator"
        app:layout_constraintVertical_bias="0.1"/>
    <LinearLayout
        android:id="@+id/linearLayoutResetExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTV"
        app:layout_constraintVertical_bias="0.1"
        android:orientation="horizontal"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt">

        <Button
            android:id="@+id/buttonResetBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_reset"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/buttonExitBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_exit"
            android:textSize="22sp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>